# swagger/swagger.yml
@@ -183,8 +183,6 @@ paths:
         "200":
           schema:
             $ref: '#/definitions/model.LoginRsp'
-        "402":
-          description: user not exist
         "410":
           description: wrong password
   /auth/logout:
@@ -282,7 +280,7 @@ definitions:
     title: HistoryInfo
     type: object
     properties:
-      ldevice:
+      devices:
         type: array
         items:
           $ref: '#/definitions/model.HistoryDevice'
@@ -290,11 +288,11 @@ definitions:
     title: LDevice
     type: object
     properties:
-      ldevice:
+      devices:
         type: array
         items:
           $ref: '#/definitions/model.Device'
-      lhome:
+      homes:
         type: array
         items:
           $ref: '#/definitions/model.Lhome'
@@ -319,12 +317,17 @@ definitions:
     title: LoginRsp
     type: object
     properties:
+      code:
+        type: integer
+        format: int64
+      data:
+        $ref: '#/definitions/model.UserInfo'
       message:
         type: string
+      status:
+        type: boolean
       token:
         type: string
-      user:
-        $ref: '#/definitions/model.UserInfo'
   model.Permission:
     title: Permission
     type: object
